--- a/plot1.ipynb
+++ b/plot1.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Project proposal: \n",
+    "\n",
+    "Firstly, given the search query or topic of interests, the code will obtain the information of scientific publications from Google Scholar (or any other alternatives, for instance, ScienceDirect, Scopus, etc.), including the relevant article titles, abstracts, publication years, affiliations where the research was conducted and how many citations they have collected. Based on these, many useful statistics would be easily extracted. To name a few, what authors are most popular in the field, what institutions published most in this topic, who are the most cited authors in the field, etc.\n",
+    "\n",
+    "At the next level, natural language processing will be used on the text of the paper titles and their abstracts to explore the evolution of research within that scientific topic over the course of the last decades and possibly predict what would be the trend in that topic in the upcoming years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For a demo, initial data was obtained from Google Scholar with the search query \"smart windows materials\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Plot 1"
    ]
   },
